Firewall/iptables
# Generated by iptables-save v1.3.6 on Sat Apr 11 22:38:09 2009
*mangle
:PREROUTING ACCEPT [1819124:1140958341]
:INPUT ACCEPT [1819112:1140957749]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1341470:1331786899]
:POSTROUTING ACCEPT [1341470:1331786899]
-A PREROUTING -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --sport 20 -j TOS --set-tos 0x08 
-A PREROUTING -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 20 -j TOS --set-tos 0x08 
-A PREROUTING -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --sport 80 -j TOS --set-tos 0x08 
-A PREROUTING -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 80 -j TOS --set-tos 0x08 
-A PREROUTING -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --sport 53 -j TOS --set-tos 0x10 
-A PREROUTING -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 53 -j TOS --set-tos 0x10 
-A PREROUTING -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 161 -j TOS --set-tos 0x04 
-A PREROUTING -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 162 -j TOS --set-tos 0x04 
-A PREROUTING -p udp -m udp --dport 514 -j TOS --set-tos 0x04 
-A OUTPUT -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --sport 20 -j TOS --set-tos 0x08 
-A OUTPUT -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 20 -j TOS --set-tos 0x08 
-A OUTPUT -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --sport 80 -j TOS --set-tos 0x08 
-A OUTPUT -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 80 -j TOS --set-tos 0x08 
-A OUTPUT -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --sport 53 -j TOS --set-tos 0x10 
-A OUTPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 53 -j TOS --set-tos 0x10 
-A OUTPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 161 -j TOS --set-tos 0x04 
-A OUTPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 162 -j TOS --set-tos 0x04 
-A OUTPUT -p udp -m udp --dport 514 -j TOS --set-tos 0x04 
COMMIT
# Completed on Sat Apr 11 22:38:09 2009
# Generated by iptables-save v1.3.6 on Sat Apr 11 22:38:09 2009
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1039:54028]
:BlackList - [0:0]
:BlackListed - [0:0]
:Brian - [0:0]
:SESAM - [0:0]
:STD_LOGIN - [0:0]
:WhiteList - [0:0]
:WhiteListed - [0:0]
:forward_dmz - [0:0]
:forward_ext - [0:0]
:forward_int - [0:0]
:input_dmz - [0:0]
:input_ext - [0:0]
:input_int - [0:0]
:reject_func - [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -i eth0 -s 10.20.1.1 -d 10.20.1.19 -p tcp -m tcp --dport 873 -j ACCEPT 
-A INPUT -i ! lo -j BlackList 
-A INPUT -i ! lo -j WhiteList 
-A INPUT -i eth2 -j STD_LOGIN 
-A INPUT -j Brian 
-A INPUT -d 255.255.255.255 -i eth2 -j DROP 
-A INPUT -i eth2 -j input_ext 
-A INPUT -i eth0 -j input_int 
-A INPUT -d 192.75.158.138 -i eth0 -j LOG --log-prefix "SFW2-IN-ACC_DENIED_INT_NET " --log-tcp-options --log-ip-options 
-A INPUT -d 192.75.158.138 -i eth0 -j DROP 
-A INPUT -j LOG --log-prefix "SFW2-IN-ILL-TARGET " --log-tcp-options --log-ip-options 
-A INPUT -j DROP 
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu 
-A FORWARD -i eth0 -o eth0 -j ACCEPT 
-A FORWARD -i eth2 -o eth2 -j ACCEPT 
-A FORWARD -i eth2 -j forward_ext 
-A FORWARD -i eth0 -j forward_int 
-A FORWARD -j LOG --log-prefix "SFW2-FWD-ILL-ROUTING " --log-tcp-options --log-ip-options 
-A FORWARD -j DROP 
-A FORWARD -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -j LOG --log-prefix "SFW2-FORWARD-ERROR " --log-tcp-options --log-ip-options 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -p icmp -m icmp --icmp-type 11 -j LOG --log-prefix "SFW2-OUT-TRACERT-ATTEMPT " --log-tcp-options --log-ip-options 
-A OUTPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT 
-A OUTPUT -p icmp -m icmp --icmp-type 3/3 -j ACCEPT 
-A OUTPUT -p icmp -m icmp --icmp-type 3/4 -j ACCEPT 
-A OUTPUT -p icmp -m icmp --icmp-type 3/9 -j ACCEPT 
-A OUTPUT -p icmp -m icmp --icmp-type 3/10 -j ACCEPT 
-A OUTPUT -p icmp -m icmp --icmp-type 3/13 -j ACCEPT 
-A OUTPUT -p icmp -m icmp --icmp-type 3 -j DROP 
-A OUTPUT -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -j LOG --log-prefix "SFW2-OUTPUT-ERROR " --log-tcp-options --log-ip-options 
-A BlackList -d 192.75.158.159 -i eth2 -j DROP 
-A BlackList -s ! 142.20.43.250 -i eth2 -p tcp -m multiport --dports 7937,7938 -j DROP 
-A BlackList -s ! 142.20.43.250 -i eth2 -p udp -m multiport --dports 7937,7938 -j DROP 
-A BlackList -i eth2 -o eth0 -j DROP 
-A BlackList -i eth0 -o eth2 -j DROP 
-A BlackList -s 192.36.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 192.38.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 59.0.0.0/255.0.0.0 -j BlackListed 
-A BlackList -s 222.0.0.0/255.0.0.0 -j BlackListed 
-A BlackList -s 129.115.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 200.50.126.232/255.255.255.248 -j BlackListed 
-A BlackList -s 203.91.120.0/255.255.248.0 -j BlackListed 
-A BlackList -s 209.200.168.64/255.255.255.224 -j BlackListed 
-A BlackList -s 213.201.44.28 -j BlackListed 
-A BlackList -s 140.109.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 140.110.0.0/255.254.0.0 -j BlackListed 
-A BlackList -s 140.112.0.0/255.240.0.0 -j BlackListed 
-A BlackList -s 140.128.0.0/255.248.0.0 -j BlackListed 
-A BlackList -s 140.136.0.0/255.254.0.0 -j BlackListed 
-A BlackList -s 140.138.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 219.96.0.0/255.224.0.0 -j BlackListed 
-A BlackList -s 222.106.83.0/255.255.255.0 -j BlackListed 
-A BlackList -s 59.76.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 200.30.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 211.233.14.0/255.255.255.0 -j BlackListed 
-A BlackList -s 192.244.208.0/255.255.240.0 -j BlackListed 
-A BlackList -s 210.127.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 62.193.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 192.107.75.0/255.255.255.0 -j BlackListed 
-A BlackList -s 8.3.218.0/255.255.255.0 -j BlackListed 
-A BlackList -s 8.3.219.0/255.255.255.0 -j BlackListed 
-A BlackList -s 200.21.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 60.28.13.0/255.255.255.0 -j BlackListed 
-A BlackList -s 89.64.0.0/255.240.0.0 -j BlackListed 
-A BlackList -s 67.50.0.0/255.254.0.0 -j BlackListed 
-A BlackList -s 211.115.110.0/255.255.255.0 -j BlackListed 
-A BlackList -s 207.234.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 212.179.128.0/255.255.224.0 -j BlackListed 
-A BlackList -s 87.69.224.0/255.255.224.0 -j BlackListed 
-A BlackList -s 200.113.160.0/255.255.224.0 -j BlackListed 
-A BlackList -s 84.12.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 61.128.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 219.242.0.0/255.254.0.0 -j BlackListed 
-A BlackList -s 210.188.216.0/255.255.255.0 -j BlackListed 
-A BlackList -s 222.80.0.0/255.252.0.0 -j BlackListed 
-A BlackList -s 219.94.80.0/255.255.240.0 -j BlackListed 
-A BlackList -s 89.212.6.0/255.255.255.0 -j BlackListed 
-A BlackList -s 203.146.127.0/255.255.255.0 -j BlackListed 
-A BlackList -s 67.50.0.0/255.254.0.0 -j BlackListed 
-A BlackList -s 213.190.34.0/255.255.255.0 -j BlackListed 
-A BlackList -s 222.199.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 81.252.11.160/255.255.255.248 -j BlackListed 
-A BlackList -s 212.180.0.0/255.255.128.0 -j BlackListed 
-A BlackList -s 202.5.192.0/255.255.192.0 -j BlackListed 
-A BlackList -s 58.60.0.0/255.252.0.0 -j BlackListed 
-A BlackList -s 195.153.104.192/255.255.255.192 -j BlackListed 
-A BlackList -s 83.14.110.184/255.255.255.248 -j BlackListed 
-A BlackList -s 218.210.0.0/255.254.0.0 -j BlackListed 
-A BlackList -s 202.96.47.0/255.255.255.0 -j BlackListed 
-A BlackList -s 219.238.88.0/255.255.255.0 -j BlackListed 
-A BlackList -s 202.138.96.0/255.255.224.0 -j BlackListed 
-A BlackList -s 213.186.40.0/255.255.248.0 -j BlackListed 
-A BlackList -s 81.216.192.0/255.255.192.0 -j BlackListed 
-A BlackList -s 221.214.0.0/255.254.0.0 -j BlackListed 
-A BlackList -s 217.67.137.104/255.255.255.248 -j BlackListed 
-A BlackList -s 82.114.12.0/255.255.255.0 -j BlackListed 
-A BlackList -s 82.114.12.0/255.255.255.0 -j BlackListed 
-A BlackList -s 222.203.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 66.115.0.0/255.255.192.0 -j BlackListed 
-A BlackList -s 60.24.0.0/255.252.0.0 -j BlackListed 
-A BlackList -s 60.28.0.0/255.255.192.0 -j BlackListed 
-A BlackList -s 218.234.32.0/255.255.255.224 -j BlackListed 
-A BlackList -s 202.28.0.0/255.254.0.0 -j BlackListed 
-A BlackList -s 218.146.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 60.0.0.0/255.0.0.0 -j BlackListed 
-A BlackList -s 218.5.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 210.51.0.0/255.255.0.0 -j BlackListed 
-A BlackList -s 82.133.244.240/255.255.255.248 -j BlackListed 
-A BlackList -s 213.180.64.0/255.255.192.0 -j BlackListed 
-A BlackList -s 60.191.63.0/255.255.255.0 -j BlackListed 
-A BlackList -s 206.221.176.0/255.255.240.0 -j BlackListed 
-A BlackList -s 219.142.53.0/255.255.255.0 -j BlackListed 
-A BlackList -s 219.142.53.0/255.255.255.0 -j BlackListed 
-A BlackList -s 58.61.164.140 -j BlackListed 
-A BlackList -s 58.60.0.0/255.255.0.0 -j BlackListed 
-A BlackListed -m limit --limit 1/min --limit-burst 10 -j LOG --log-prefix "SFW2-BLACKLISTED-DROP " 
-A BlackListed -j DROP 
-A Brian -d 192.75.158.138 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m multiport --dports 80,443,8081 -m limit --limit 4/hour -j LOG --log-prefix "SFW2-ACC-HSC->WODAKS-BRIAN " 
-A Brian -d 192.75.158.138 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m multiport --dports 80,443,8081 -j ACCEPT 
-A Brian -s 192.75.158.13 -d 192.75.158.138 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 6060 -m limit --limit 4/hour -j LOG --log-prefix "SFW2-ACC-HSC->WODAKS-BRIAN " 
-A Brian -s 192.75.158.13 -d 192.75.158.138 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 6060 -j ACCEPT 
-A STD_LOGIN -i eth2 -s 142.20.0.0/16 -p tcp -m state --state NEW,RELATED -m tcp --dport 206 -j LOG --log-prefix "SFW2-STD_LOGIN-ACC-SSH " 
-A STD_LOGIN -i eth2 -s 142.20.0.0/16 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 206 -j ACCEPT 
-A STD_LOGIN -p tcp -m tcp --dport 22 --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INext-WARN-SSH22-drop " --log-tcp-options --log-ip-options 
-A STD_LOGIN -p tcp -m tcp --dport 22 -j DROP 
-A WhiteList -s 142.20.81.133 -d 192.75.158.138 -i eth2 -p tcp -m tcp --dport 25 -j WhiteListed 
-A forward_ext -d 10.20.1.1 -j LOG --log-prefix "SFW2-FWDext-DROP-CIRCUMV " --log-tcp-options --log-ip-options 
-A forward_ext -d 10.20.1.1 -j DROP 
-A forward_ext -p icmp -m state --state RELATED -m icmp --icmp-type 3 -j ACCEPT 
-A forward_ext -p icmp -m state --state RELATED,ESTABLISHED -m icmp --icmp-type 0 -j ACCEPT 
-A forward_ext -o eth2 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A forward_ext -i eth2 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A forward_ext -p tcp -m tcp --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-FWDext-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A forward_ext -p icmp -m icmp --icmp-type 4 -j LOG --log-prefix "SFW2-FWDext-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A forward_ext -p icmp -m icmp --icmp-type 5 -j LOG --log-prefix "SFW2-FWDext-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A forward_ext -p icmp -m icmp --icmp-type 8 -j LOG --log-prefix "SFW2-FWDext-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A forward_ext -p icmp -m icmp --icmp-type 13 -j LOG --log-prefix "SFW2-FWDext-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A forward_ext -p icmp -m icmp --icmp-type 17 -j LOG --log-prefix "SFW2-FWDext-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A forward_ext -p udp -j LOG --log-prefix "SFW2-FWDext-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A forward_ext -m state --state INVALID -j LOG --log-prefix "SFW2-FWDext-DROP-DEFLT-INV " --log-tcp-options --log-ip-options 
-A forward_ext -j DROP 
-A forward_int -d 192.75.158.138 -j LOG --log-prefix "SFW2-FWDint-DROP-CIRCUMV " --log-tcp-options --log-ip-options 
-A forward_int -d 192.75.158.138 -j DROP 
-A forward_int -p icmp -m state --state RELATED -m icmp --icmp-type 3 -j ACCEPT 
-A forward_int -p icmp -m state --state RELATED,ESTABLISHED -m icmp --icmp-type 0 -j ACCEPT 
-A forward_int -o eth2 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A forward_int -i eth2 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A forward_int -p tcp -m tcp --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-FWDint-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A forward_int -p icmp -m icmp --icmp-type 4 -j LOG --log-prefix "SFW2-FWDint-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A forward_int -p icmp -m icmp --icmp-type 5 -j LOG --log-prefix "SFW2-FWDint-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A forward_int -p icmp -m icmp --icmp-type 8 -j LOG --log-prefix "SFW2-FWDint-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A forward_int -p icmp -m icmp --icmp-type 13 -j LOG --log-prefix "SFW2-FWDint-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A forward_int -p icmp -m icmp --icmp-type 17 -j LOG --log-prefix "SFW2-FWDint-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A forward_int -p udp -j LOG --log-prefix "SFW2-FWDint-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A forward_int -m state --state INVALID -j LOG --log-prefix "SFW2-FWDint-DROP-DEFLT-INV " --log-tcp-options --log-ip-options 
-A forward_int -j DROP 
-A input_ext -p icmp -m icmp --icmp-type 4 -j LOG --log-prefix "SFW2-INext-ACC-SOURCEQUENCH " --log-tcp-options --log-ip-options 
-A input_ext -p icmp -m icmp --icmp-type 4 -j ACCEPT 
-A input_ext -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A input_ext -p icmp -m state --state RELATED,ESTABLISHED -m icmp --icmp-type 0 -j ACCEPT 
-A input_ext -p icmp -m state --state RELATED,ESTABLISHED -m icmp --icmp-type 3 -j ACCEPT 
-A input_ext -p icmp -m state --state RELATED,ESTABLISHED -m icmp --icmp-type 11 -j ACCEPT 
-A input_ext -p icmp -m state --state RELATED,ESTABLISHED -m icmp --icmp-type 12 -j ACCEPT 
-A input_ext -p icmp -m state --state RELATED,ESTABLISHED -m icmp --icmp-type 14 -j ACCEPT 
-A input_ext -p icmp -m state --state RELATED,ESTABLISHED -m icmp --icmp-type 18 -j ACCEPT 
-A input_ext -p icmp -m icmp --icmp-type 5 -j LOG --log-prefix "SFW2-INext-DROP-ICMP-CRIT " --log-tcp-options --log-ip-options 
-A input_ext -p icmp -m icmp --icmp-type 4 -j LOG --log-prefix "SFW2-INext-DROP-ICMP-CRIT " --log-tcp-options --log-ip-options 
-A input_ext -p icmp -m icmp --icmp-type 13 -j LOG --log-prefix "SFW2-INext-DROP-ICMP-CRIT " --log-tcp-options --log-ip-options 
-A input_ext -p icmp -m icmp --icmp-type 17 -j LOG --log-prefix "SFW2-INext-DROP-ICMP-CRIT " --log-tcp-options --log-ip-options 
-A input_ext -p icmp -m icmp --icmp-type 2 -j LOG --log-prefix "SFW2-INext-DROP-ICMP-CRIT " --log-tcp-options --log-ip-options 
-A input_ext -p icmp -j DROP 
-A input_ext -p tcp -m tcp --dport 111 -j LOG --log-prefix "SFW2-INext-DROP-TCP-p111 " 
-A input_ext -p tcp -m tcp --dport 111 -j DROP 
-A input_ext -p tcp -m tcp --dport 123 --tcp-flags SYN,RST,ACK SYN -j reject_func 
-A input_ext -p tcp -m tcp --dport 113 --tcp-flags SYN,RST,ACK SYN -j reject_func 
-A input_ext -p tcp -m tcp --dport 389 --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INext-DROP " --log-tcp-options --log-ip-options 
-A input_ext -p tcp -m tcp --dport 389 --tcp-flags SYN,RST,ACK SYN -j DROP 
-A input_ext -p tcp -m tcp --dport 427 --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INext-DROP " --log-tcp-options --log-ip-options 
-A input_ext -p tcp -m tcp --dport 427 --tcp-flags SYN,RST,ACK SYN -j DROP 
-A input_ext -p tcp -m tcp --dport 514 --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INext-DROP " --log-tcp-options --log-ip-options 
-A input_ext -p tcp -m tcp --dport 514 --tcp-flags SYN,RST,ACK SYN -j DROP 
-A input_ext -p tcp -m tcp --dport 619 --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INext-DROP " --log-tcp-options --log-ip-options 
-A input_ext -p tcp -m tcp --dport 619 --tcp-flags SYN,RST,ACK SYN -j DROP 
-A input_ext -p tcp -m tcp --dport 843 --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INext-DROP " --log-tcp-options --log-ip-options 
-A input_ext -p tcp -m tcp --dport 843 --tcp-flags SYN,RST,ACK SYN -j DROP 
-A input_ext -p tcp -m tcp --dport 888 --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INext-DROP " --log-tcp-options --log-ip-options 
-A input_ext -p tcp -m tcp --dport 888 --tcp-flags SYN,RST,ACK SYN -j DROP 
-A input_ext -p tcp -m tcp --dport 924 --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INext-DROP " --log-tcp-options --log-ip-options 
-A input_ext -p tcp -m tcp --dport 924 --tcp-flags SYN,RST,ACK SYN -j DROP 
-A input_ext -p tcp -m tcp --dport 1029 --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INext-DROP " --log-tcp-options --log-ip-options 
-A input_ext -p tcp -m tcp --dport 1029 --tcp-flags SYN,RST,ACK SYN -j DROP 
-A input_ext -p tcp -m tcp --dport 2049 --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INext-DROP " --log-tcp-options --log-ip-options 
-A input_ext -p tcp -m tcp --dport 2049 --tcp-flags SYN,RST,ACK SYN -j DROP 
-A input_ext -p tcp -m tcp --dport 15001 --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INext-DROP " --log-tcp-options --log-ip-options 
-A input_ext -p tcp -m tcp --dport 15001 --tcp-flags SYN,RST,ACK SYN -j DROP 
-A input_ext -p tcp -m tcp --dport 15002 --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INext-DROP " --log-tcp-options --log-ip-options 
-A input_ext -p tcp -m tcp --dport 15002 --tcp-flags SYN,RST,ACK SYN -j DROP 
-A input_ext -p tcp -m tcp --dport 15003 --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INext-DROP " --log-tcp-options --log-ip-options 
-A input_ext -p tcp -m tcp --dport 15003 --tcp-flags SYN,RST,ACK SYN -j DROP 
-A input_ext -p tcp -m state --state RELATED,ESTABLISHED -m tcp --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INext-ACC-HiTCP " --log-tcp-options --log-ip-options 
-A input_ext -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A input_ext -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A input_ext -p udp -m state --state NEW -m udp --dport 22 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 67 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 67 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 111 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 123 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 123 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 123 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 389 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 389 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 427 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 427 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 514 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 616 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 619 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 840 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 843 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 886 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 888 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 921 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 924 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 928 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 1022 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 1023 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 1024 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 1026 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 1028 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 1029 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 1029 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 1030 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 1031 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 1032 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 1033 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 1034 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 1035 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 1036 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 2049 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 2049 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 5353 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 7938 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 15001 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 15001 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 15002 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 15003 -j DROP 
-A input_ext -p udp -m state --state NEW -m udp --dport 15003 -j DROP 
-A input_ext -p udp -m state --state ESTABLISHED -m udp --dport 61000:65095 -j ACCEPT 
-A input_ext -p tcp -m tcp --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INext-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A input_ext -p icmp -m icmp --icmp-type 4 -j LOG --log-prefix "SFW2-INext-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A input_ext -p icmp -m icmp --icmp-type 5 -j LOG --log-prefix "SFW2-INext-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A input_ext -p icmp -m icmp --icmp-type 8 -j LOG --log-prefix "SFW2-INext-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A input_ext -p icmp -m icmp --icmp-type 13 -j LOG --log-prefix "SFW2-INext-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A input_ext -p icmp -m icmp --icmp-type 17 -j LOG --log-prefix "SFW2-INext-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A input_ext -p udp -j LOG --log-prefix "SFW2-INext-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A input_ext -m state --state INVALID -j LOG --log-prefix "SFW2-INext-DROP-DEFLT-INV " --log-tcp-options --log-ip-options 
-A input_ext -j DROP 
-A input_int -j ACCEPT 
-A input_int -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A input_int -p icmp -m state --state RELATED,ESTABLISHED -m icmp --icmp-type 0 -j ACCEPT 
-A input_int -p icmp -m state --state RELATED,ESTABLISHED -m icmp --icmp-type 3 -j ACCEPT 
-A input_int -p icmp -m state --state RELATED,ESTABLISHED -m icmp --icmp-type 11 -j ACCEPT 
-A input_int -p icmp -m state --state RELATED,ESTABLISHED -m icmp --icmp-type 12 -j ACCEPT 
-A input_int -p icmp -m state --state RELATED,ESTABLISHED -m icmp --icmp-type 14 -j ACCEPT 
-A input_int -p icmp -m state --state RELATED,ESTABLISHED -m icmp --icmp-type 18 -j ACCEPT 
-A input_int -p icmp -m icmp --icmp-type 5 -j LOG --log-prefix "SFW2-INint-DROP-ICMP-CRIT " --log-tcp-options --log-ip-options 
-A input_int -p icmp -m icmp --icmp-type 4 -j LOG --log-prefix "SFW2-INint-DROP-ICMP-CRIT " --log-tcp-options --log-ip-options 
-A input_int -p icmp -m icmp --icmp-type 13 -j LOG --log-prefix "SFW2-INint-DROP-ICMP-CRIT " --log-tcp-options --log-ip-options 
-A input_int -p icmp -m icmp --icmp-type 17 -j LOG --log-prefix "SFW2-INint-DROP-ICMP-CRIT " --log-tcp-options --log-ip-options 
-A input_int -p icmp -m icmp --icmp-type 2 -j LOG --log-prefix "SFW2-INint-DROP-ICMP-CRIT " --log-tcp-options --log-ip-options 
-A input_int -p icmp -j DROP 
-A input_int -p tcp -m tcp --dport 113 --tcp-flags SYN,RST,ACK SYN -j reject_func 
-A input_int -p tcp -m state --state RELATED,ESTABLISHED -m tcp --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INint-ACC-HiTCP " --log-tcp-options --log-ip-options 
-A input_int -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A input_int -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A input_int -p tcp -m tcp --tcp-flags SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INint-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A input_int -p icmp -m icmp --icmp-type 4 -j LOG --log-prefix "SFW2-INint-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A input_int -p icmp -m icmp --icmp-type 5 -j LOG --log-prefix "SFW2-INint-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A input_int -p icmp -m icmp --icmp-type 8 -j LOG --log-prefix "SFW2-INint-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A input_int -p icmp -m icmp --icmp-type 13 -j LOG --log-prefix "SFW2-INint-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A input_int -p icmp -m icmp --icmp-type 17 -j LOG --log-prefix "SFW2-INint-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A input_int -p udp -j LOG --log-prefix "SFW2-INint-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A input_int -m state --state INVALID -j LOG --log-prefix "SFW2-INint-DROP-DEFLT-INV " --log-tcp-options --log-ip-options 
-A input_int -j DROP 
-A reject_func -p tcp -j REJECT --reject-with tcp-reset 
-A reject_func -p udp -j REJECT --reject-with icmp-port-unreachable 
-A reject_func -j REJECT --reject-with icmp-proto-unreachable 
COMMIT
# Completed on Sat Apr 11 22:38:09 2009
# Generated by iptables-save v1.3.6 on Sat Apr 11 22:38:09 2009
*nat
:PREROUTING ACCEPT [178208:11511022]
:POSTROUTING ACCEPT [7400:444230]
:OUTPUT ACCEPT [8417:538635]
:SESAM - [0:0]
:kc - [0:0]
:kc1 - [0:0]
:kc2 - [0:0]
-A PREROUTING -i eth2 -p tcp -m state --state INVALID,NEW,RELATED,UNTRACKED -m multiport --dports 22222,40,21,990 -j SESAM 
-A PREROUTING 
-A POSTROUTING -o eth2 -j MASQUERADE 
-A SESAM -p tcp -m state --state NEW -m tcp --dport 22222 -m recent --rcheck --seconds 10 --name portKnock --rsource -j kc 
-A SESAM -p tcp -m state --state NEW -m tcp --dport 40 -m recent --set --name portKnock2 --rsource -j DROP 
-A SESAM -p tcp -m state --state NEW -m tcp --dport 21 -m recent --rcheck --seconds 10 --name portKnock2 --rsource -j kc1 
-A SESAM -p tcp -m state --state NEW -m tcp --dport 990 -m recent --rcheck --seconds 10 --name portKnock1 --rsource -j kc2 
-A SESAM -p tcp -m state --state NEW -m tcp --dport 39 -m recent --remove --name portKnock2 --rsource -j DROP 
-A SESAM -p tcp -m state --state NEW -m tcp --dport 41 -m recent --remove --name portKnock2 --rsource -j DROP 
-A SESAM -p tcp -m state --state NEW -m tcp --dport 20 -m recent --remove --name portKnock1 --rsource -j DROP 
-A SESAM -p tcp -m state --state NEW -m tcp --dport 22 -m recent --remove --name portKnock1 --rsource -j DROP 
-A SESAM -p tcp -m state --state NEW -m tcp --dport 989 -m recent --remove --name portKnock --rsource -j DROP 
-A SESAM -p tcp -m state --state NEW -m tcp --dport 991 -m recent --remove --name portKnock --rsource -j DROP 
-A SESAM -j DROP 
-A kc -m recent --update --name portKnock --rsource -j LOG --log-prefix "SFW2-SESAMKNOCK-ACC-TCP " 
-A kc -p tcp -m recent --remove --name portKnock --rsource -j DNAT --to-destination :206 
-A kc1 -m recent --remove --name portKnock2 --rsource 
-A kc1 -m recent --set --name portKnock1 --rsource -j DROP 
-A kc2 -m recent --remove --name portKnock1 --rsource 
-A kc2 -m recent --set --name portKnock --rsource -j DROP 
COMMIT
# Completed on Sat Apr 11 22:38:09 2009
